--- a/RPS/src/app/pages/post/post.page.html
+++ b/RPS/src/app/pages/post/post.page.html
@@ -38,7 +38,12 @@
     <ion-item class="ion-margin-top">
       <ion-label >Upload image</ion-label>
       <ion-input type="file" (change)="uploadImage($event.target.files)" accept="image/png, image/jpeg"></ion-input>
-      <progress max="100" [value]="(uploadPercent | async)"></progress>
+    </ion-item>
+    <ion-item *ngIf="uploadURL | async;">
+      <ion-text color="success" text-center>
+        Uploaded!
+      </ion-text>
+      <ion-icon color="error" text-center name="close" (click)="removeImage()"></ion-icon>
     </ion-item>
     <ion-item class="ion-margin-top">
       <ion-button>Take image</ion-button>
